fix spacing of quick info

--- a/public/contents/style.css
+++ b/public/contents/style.css
@@ -32,6 +32,13 @@ div.quickInfo{
 
 div.quickInfo>div{
     margin: auto;
+    min-width: 20em;
+    padding: 0 2em
+}
+@media (max-width:660px) {
+    div.quickInfo{
+        display: block;
+    }
 }
 
 /* div.quickInfo>div{
@@ -134,6 +141,10 @@ div.quickInfo h2{
 .projectGallery h3{
     margin-top: 2vw;
     color:#00407A;
+}
+.projectGallery img{
+    width: 100%;
+    height: auto;
 }
 .projectGallery button{
     width: 10em;
